--- a/app/src/main/res/layout/array_list_item.xml
+++ b/app/src/main/res/layout/array_list_item.xml
@@ -6,6 +6,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="24sp"
         android:id="@+id/tv_deviceName"/>
 
 </LinearLayout>
