--- a/app/src/main/res/layout/dialog_bluetooth_devices.xml
+++ b/app/src/main/res/layout/dialog_bluetooth_devices.xml
@@ -19,4 +19,10 @@
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_dialogDispBTEncontrados"
+        android:text="@string/closeBTDevicesDialog"/>
+
 </LinearLayout>
