--- a/app/src/main/res/layout/dialog_bluetooth_devices.xml
+++ b/app/src/main/res/layout/dialog_bluetooth_devices.xml
@@ -8,10 +8,10 @@
         android:id="@+id/tv_dispBTencontrados"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/dispBTencontrados"
         android:textSize="@dimen/textDefaultSize"
-        android:textStyle="bold"
-        android:layout_marginTop="8dp"/>
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/listviewBTdevices"
